create a new/better .env example to help newcomers who want to develop locally

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,15 @@
-SLACK_CLIENT_ID=YOUR_SLACK_APP_ID
-SLACK_CLIENT_SECRET=YOUR_SLACK_APP_SECRET
+HACKATIME_API_TOKEN=your_hackatime_api_token
+AIRTABLE_API_KEY=your_airtable_api_key
+AIRTABLE_BASE_ID=your_airtable_base_id
+EMAIL_FROM=your_email@example.com
+EMAIL_SERVER=smtp://your_smtp_connection_string
+NEXTAUTH_SECRET=your_nextauth_secret
 NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your-secret
-EMAIL_SERVER=SMPT_CONNECTION_STRING
-EMAIL_FROM=ship@hackclub.com
-AIRTABLE_API_KEY=your_api_key_here
-AIRTABLE_BASE_ID=your_base_id_here
-SLACK_BOT_TOKEN=your_bot_token_here
-IPINFO_API_TOKEN=youw_ipinfo_api_token
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/shipwrecked
+REDIS_URL=redis://localhost:6379
+SLACK_CLIENT_ID=your_slack_client_id
+SLACK_CLIENT_SECRET=your_slack_client_secret
 
-# This was inserted by `prisma init`:
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+# Authentication guarding /bay resources
+AUTH_USERNAME=your_username
+AUTH_PASSWORD=your_password
