--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,9 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:5432/shipwrecked
 REDIS_URL=redis://localhost:6379
 SLACK_CLIENT_ID=your_slack_client_id
 SLACK_CLIENT_SECRET=your_slack_client_secret
+GRAPHITE_HOST=138.197.106.80
+LOOPS_API_KEY=your-loops-api-key
+LOOPS_TRANSACTION_EMAIL_ID=your-loops-transaction-email-id
 
 # Authentication guarding /bay resources
 AUTH_USERNAME=your_username
