--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.3",
+    "socket.io": "^4.8.0",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
     "tailwindcss": "^4.1.4",
     "zod": "^3.24.3"
