--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/mdx": "^2.0.13",
     "airtable": "^0.12.2",
     "dotenv": "^16.5.0",
+    "express": "^4.19.2",
     "ioredis": "^5.6.1",
     "lenis": "^1.2.3",
     "motion": "^12.6.3",
