--- a/docker-compose-local.yaml
+++ b/docker-compose-local.yaml
@@ -6,7 +6,7 @@ services:
       file: docker-compose.yaml
       service: app
     environment:
-      - NODE_ENV=production
+      - NODE_ENV=development
       - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/shipwrecked
       - REDIS_URL=redis://redis:6379
     ports:
