--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# Ignore lock file
+yarn.lock
+package-lock.json
+
 # ignore generated prisma schema
 app/generated
 webhook-forwarder/node_modules
