--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.3.0",
-    "@prisma/client": "^6.6.0",
+    "@prisma/client": "6.11.1",
     "@slack/web-api": "^7.9.1",
     "@tailwindcss/postcss": "^4.1.4",
     "@types/mdx": "^2.0.13",
@@ -28,9 +28,8 @@
     "ioredis": "^5.6.1",
     "lenis": "^1.2.3",
     "motion": "^12.6.3",
-    "next": "15.2.3",
+    "next": "^15.3.5",
     "next-auth": "^4.24.11",
-
     "nodemailer": "^7.0.3",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
@@ -44,13 +43,12 @@
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/node-fetch": "^2.6.12",
-
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
-    "prisma": "^6.6.0",
+    "prisma": "6.11.1",
     "tsx": "^4.19.4",
     "typescript": "^5"
   }
