--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@prisma/client": "6.11.1",
     "@slack/web-api": "^7.9.1",
     "@tailwindcss/postcss": "^4.1.4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/mdx": "^2.0.13",
     "airtable": "^0.12.2",
     "dotenv": "^16.5.0",
+    "groq-sdk": "^0.27.0",
     "ioredis": "^5.6.1",
     "lenis": "^1.2.3",
     "motion": "^12.6.3",
@@ -34,6 +36,7 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwindcss": "^4.1.4",
