--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@slack/web-api": "^7.9.1",
     "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/js-yaml": "^4.0.9",
     "@types/mdx": "^2.0.13",
     "airtable": "^0.12.2",
     "dotenv": "^16.5.0",
     "groq-sdk": "^0.27.0",
     "ioredis": "^5.6.1",
+    "js-yaml": "^4.1.0",
     "lenis": "^1.2.3",
     "motion": "^12.6.3",
     "next": "^15.3.5",
