Add missing flight environment variables

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,8 @@ LOOPS_TRANSACTIONAL_NOTIFICATION_EMAIL_ID=transaction-email-id
 IDENTITY_URL="identity-service-url"
 IDENTITY_CLIENT_ID="identity-client-id"
 IDENTITY_CLIENT_SECRET="identity-client-secret"
+FLIGHT_API_URL=https://flights.ucyt5040.hackclub.app
+FLIGHT_API_TOKEN=flight-api-token
 
 # Authentication guarding /bay resources
 AUTH_USERNAME=your_username
