--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "groq-sdk": "^0.27.0",
     "ioredis": "^5.6.1",
     "js-yaml": "^4.1.0",
+    "leaflet": "^1.9.4",
+    "leaflet-rotatedmarker": "^0.2.0",
     "lenis": "^1.2.3",
     "motion": "^12.6.3",
     "next": "^15.3.5",
@@ -38,6 +40,7 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-markdown": "^10.1.0",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
