--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/js-yaml": "^4.0.9",
     "@types/mdx": "^2.0.13",
     "airtable": "^0.12.2",
+    "busboy": "^1.6.0",
     "dotenv": "^16.5.0",
     "groq-sdk": "^0.27.0",
     "ioredis": "^5.6.1",
